--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://unne.pa/",
+  "homepage": "https://relocate.unne.cl/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
